--- a/Pong/package.json
+++ b/Pong/package.json
@@ -14,6 +14,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
     "react-native-form": "^2.1.3",
+    "react-native-qrcode-scanner": "^1.1.0",
     "react-navigation": "^2.18.0"
   }
 }
