--- a/Pong/package.json
+++ b/Pong/package.json
@@ -15,6 +15,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-form": "^2.1.3",
     "react-native-is-iphonex": "^1.0.1",
+    "react-native-qrcode": "^0.2.7",
     "react-navigation": "^2.18.0"
   }
 }
