--- a/Pong/package.json
+++ b/Pong/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "expo": "^30.0.1",
+    "native-base": "^2.8.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
     "react-native-form": "^2.1.3",
+    "react-native-router-flux": "^4.0.5",
     "react-navigation": "^2.18.0"
   }
 }
