--- a/Pong/package.json
+++ b/Pong/package.json
@@ -18,6 +18,8 @@
     "react-native-popup-dialog": "^0.15.1",
     "react-native-qrcode": "^0.2.7",
     "react-native-router-flux": "^4.0.5",
-    "react-navigation": "^2.18.0"
+    "react-navigation": "^2.18.0",
+    "react-sizes": "^1.0.4",
+    "react-social-icons": "^3.0.0"
   }
 }
